--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,15 +38,15 @@
   --background: #ffffff;
   --foreground: #3d3535;
 
-  --primary-color:#1c92d2;
-  --secondary-color:#f2fcfe;
+  --primary-color: #1c92d2;
+  --secondary-color: #f2fcfe;
 
   --primary-dark: #156c9c;
   --primary-light: #d9f4fc;
   --accent-color: #0f4e75;
 }
 
-.dark{
+.dark {
   --background: #111111;
   --foreground: #ededed;
 }
@@ -92,12 +92,12 @@ p a:hover {
   transform: translate(0, -2px);
 }
 
-.section{
+.section {
   padding-top: clamp(70px, 7vw, 100px);
   position: relative;
 }
 
-.section-project{
+.section-project {
   padding-top: clamp(70px, 7vw, 100px);
   position: relative;
 }
@@ -109,11 +109,11 @@ p a:hover {
   padding-bottom: 3vw;
 }
 .wrap-wide {
-  margin: 0 auto;
   max-width: 1420px;
   padding-left: 20px;
   padding-right: 20px;
   position: relative;
+  align-items: center;
 }
 @media screen and (max-width: 1740px) {
   .wrap-wide {
@@ -128,33 +128,32 @@ p a:hover {
   }
 }
 
-h1{
+h1 {
   font-size: clamp(25px, 3vw, 30px);
   line-height: 1;
   font-family: "Larry-ExtraBold", sans-serif;
 }
 
-h2{
+h2 {
   font-size: clamp(19px, 3vw, 23px);
   line-height: 1;
   font-family: "Larry-Medium", sans-serif;
 }
 
-h1.big{
+h1.big {
   font-size: clamp(40px, 5vw, 60px);
 }
 p {
-  font-size:clamp(15px, 3vw,20px);
+  font-size: clamp(15px, 3vw, 20px);
   font-family: "Larry-Medium", sans-serif;
-
 }
 p.small {
-  font-size:clamp(11px, 2.5vw, 17px);
+  font-size: clamp(11px, 2.5vw, 17px);
   font-family: "Larry-Regular", sans-serif;
 }
 
 p.name {
-  font-size:clamp(10px, 2vw, 12px);
+  font-size: clamp(10px, 2vw, 12px);
   font-family: "Larry-Regular", sans-serif;
 }
 /* h1.big{
@@ -163,8 +162,6 @@ p.name {
   font-family: "Larry-Regular", sans-serif;
   margin-bottom: 3vw;
 } */
-
-
 
 .button {
   text-align: center;
@@ -192,35 +189,44 @@ p.name {
   border: 1px solid currentColor;
 }
 
-
 .button-link:hover,
 .mobile-button:hover {
- 
 }
 
-
 @keyframes gradientShift {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 .animated-gradient {
   background-size: 200% 200%;
   animation: gradientShift 4s ease infinite;
 }
 
-
-
 /* cards effect*/
 
-
-.cards{
-
+.cards {
 }
 
-
 /* ------------------------- Pre Footer -------------------------------------------------- */
-
+.prefooter {
+  text-align: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  max-width: 700px;
+  margin-bottom: 64px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  position: relative;
+}
 .prefooter .sub-wrap:nth-child(2) {
   padding-top: 2rem;
 }
@@ -488,7 +494,6 @@ main#home .header-image.mobile {
   transition: all 0.2s cubic-bezier(0.83, 0, 0.13, 1);
 }
 
-
 .stripe {
   width: 100%;
   height: 1px;
@@ -504,4 +509,26 @@ main#home .header-image.mobile {
   opacity: 0.6;
   position: relative;
   border-radius: 100%;
+}
+
+.section-title-labels.footer-title {
+  flex-flow: column;
+  flex: none;
+  justify-content: flex-start;
+  align-items: stretch;
+  height: 18px;
+  margin-bottom: 32px;
+  display: flex;
+  overflow: hidden;
+}
+
+.label {
+  text-transform: uppercase;
+  font-size: .8em;
+  line-height: 1.3;
+}
+
+.label.email {
+  flex: none;
+  height: 100%;
 }
