--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,10 @@
   font-family: Syne-Regular;
   src: url("../fonts/syne/Syne-Regular.ttf");
 }
+@font-face {
+  font-family: Krona-Regular;
+  src: url("../fonts/krona-one/KronaOne-Regular.ttf");
+}
 
 :root {
   --primary-color: #1c92d2;
@@ -133,6 +137,10 @@ h2 {
   font-size: clamp(19px, 3vw, 23px);
   line-height: 1;
   font-family: "Larry-Medium", sans-serif;
+}
+h2.medium {
+  font-size: clamp(15px, 3vw, 20px);
+  line-height: 1;
 }
 
 h1.big {
